--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=Project API
+spring.application.name=ProjectSpring
 spring.profiles.active=test
 spring.jpa.open-in-view=true
